Fixed dropdown alignment issue, added Staff dropdown contents

--- a/3rd_deliverable_site/css/stylesheet.css
+++ b/3rd_deliverable_site/css/stylesheet.css
@@ -88,6 +88,10 @@ Top nav bar
         background-color: #FF540A;
     }
 
+#campuslife-drop {
+    max-width: 720px;
+}
+
 /*
 -------------------------
 Body (second level pages)
